--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4672,7 +4672,7 @@ Cube:
 
 # CUBOT
 CUBOT:
-  regex: 'CUBOT|(?<!QUMO )QUEST(?!(?:[0-9]|\s[0-9]))(?: LITE)?|(?:NOTE 20 PRO|RAINBOW 2|KING_KONG_3|KINGKONG 5 Pro|ZORRO 001|KINGKONG[_ ]MINI2?|KING KONG CS|R15_PRO|S550 Pro| CHEETAH)(?:[);/ ]|$)'
+  regex: 'CUBOT|(?<!QUMO )QUEST(?!(?:[0-9]|\s[0-9]))(?: LITE)?|(?:NOTE 20 PRO|RAINBOW 2|KING_KONG_3|KINGKONG 7|KINGKONG 5 Pro|ZORRO 001|KINGKONG[_ ]MINI2?|KING KONG CS|R15_PRO|S550 Pro| CHEETAH)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'CHEETAH( 2)?'
@@ -4687,8 +4687,8 @@ CUBOT:
       model: 'King Kong Mini 2'
     - regex: 'KINGKONG_MINI'
       model: 'King Kong Mini'
-    - regex: 'KING_KONG_3'
-      model: 'King Kong 3'
+    - regex: 'KING[_ ]?KONG[_ ]([37])'
+      model: 'King Kong $1'
     - regex: 'KINGKONG 5 Pro'
       model: 'King Kong 5 Pro'
     - regex: 'KING KONG CS'
@@ -12679,9 +12679,9 @@ Onda:
     - regex: 'Onda ([a-z0-9]+)'
       model: '$1'
 
-# OnePlus
+# OnePlus (www.oneplus.com or oneplus.com.ru)
 OnePlus:
-  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|AC200[13]|A300[03]|A3010|A5000|A600[03]|A601[03]|BE201[1235]|BE202[5689]|E100[135]|GM191[03517]|GM190[0135]|GM192[05]|HD191[013]|HD190[01357]|HD1925|IN201[013579]|IN202[0135]|KB200[01357]|LE211[037]|LE212[035]|Nord N10 5G|LE210[01]|LE2121)(?: Build|\))'
+  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|AC200[13]|A300[03]|A3010|A5000|A600[03]|A601[03]|BE201[1235]|BE202[5689]|E100[135]|GM191[03517]|GM190[0135]|GM192[05]|HD191[013]|HD190[01357]|HD1925|IN201[013579]|IN202[0135]|KB200[01357]|LE211[037]|LE212[035]|Nord N10 5G|LE210[01]|LE2121|DE2117|DN2101)(?: Build|\))'
   device: 'smartphone'
   models:
     - regex: 'AC200[13](?:[);/ ]|$)'
@@ -12690,12 +12690,16 @@ OnePlus:
       model: 'Clover'
     - regex: 'BE201[135](?:[);/ ]|$)'
       model: 'Nord N100'
+    - regex: 'DE2117(?:[);/ ]|$)'
+      model: 'Nord N200 5G'
     - regex: 'BE2025(?:[);/ ]|$)'
       model: 'Nord N10'
     - regex: '(BE202[69]|Nord N10 5G)(?:[);/ ]|$)'
       model: 'Nord N10 5G'
     - regex: 'BE2028(?:[);/ ]|$)'
       model: 'Nord N10 Lite'
+    - regex: 'DN2101(?:[);/ ]|$)'
+      model: 'Nord 2 5G'
     - regex: 'IN202[0135](?:[);/ ]|$)'
       model: '8 Pro'
     - regex: 'KB2000(?:[);/ ]|$)'
@@ -12745,7 +12749,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|42|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[156]|6[13]|7[036]|8[059]|9[345])|220[0125]|18(0[13579]|11|3[13]|2[157]|[45]1|53|45)|32(?:01|42|[346]1)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|15|9[15]|71)|3350|3363)|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
+  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|42|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[156]|6[13]|7[036]|8[059]|9[345])|220[0125]|18(0[13579]|11|3[13]|2[157]|[45]1|53|45)|32(?:01|42|[346]1)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|15|9[15]|6[16]|71)|3350|336[36])|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861(?:[);/ ]|$)'
@@ -12774,6 +12778,8 @@ Realme:
       model: 'Q2 Pro'
     - regex: 'RMX2205'
       model: 'Q3 Pro 5G'
+    - regex: 'RMX3161'
+      model: 'Q3 5G'
     - regex: 'RMX2176(?:[);/ ]|$)'
       model: 'X7 5G'
     - regex: 'RMX2121(?:[);/ ]|$)'
@@ -12840,7 +12846,7 @@ Realme:
       model: 'C11 (2021)'
     - regex: 'RMX3031(?:[);/ ]|$)'
       model: 'GT Neo'
-    - regex: 'RMX3363(?:[);/ ]|$)'
+    - regex: 'RMX336[36](?:[);/ ]|$)'
       model: 'GT Master Edition'
     - regex: 'RMX3350(?:[);/ ]|$)'
       model: 'GT Neo Flash'
@@ -13191,6 +13197,8 @@ OPPO:
       model: 'Reno 5 Pro Plus 5G'
     - regex: 'CPH1921(?:[);/ ]|$)'
       model: 'Reno 5G'
+    - regex: 'CPH2235(?:[);/ ]|$)'
+      model: 'Reno 6'
     - regex: 'PCLM10(?:[);/ ]|$)'
       model: 'Reno Ace'
     - regex: 'PDHM00(?:[);/ ]|$)'
@@ -13240,7 +13248,7 @@ Orange:
 
 # Oukitel
 Oukitel:
-  regex: 'OUKITEL|(?:(?:C1[569]|K10000|K[46]000)(?:[ _]Pro)|K4000Pro|C11_Pro|C1[0237] Pro|C2[13] Pro|C12 Plus|U15 Pro|K15_Plus|U16 Max|C11_F|U7 Max|U7 Plus|U11[_ ]Plus|U20_Plus|OK6000 Plus|WP5000|WP[58] Pro|K[46]000[ _](?:Plus|Lite)|Y4800|K10000|K[4-8]000| WP(?:[5-7]|12))(?:[);/ ]|$)'
+  regex: 'OUKITEL|(?:(?:C1[569]|K10000|K[46]000)(?:[ _]Pro)|K4000Pro|C11_Pro|C1[0237] Pro|C2[13] Pro|C12 Plus|U15 Pro|K15_Plus|U16 Max|C11_F|U7 Max|U7 Plus|U11[_ ]Plus|U20_Plus|OK6000 Plus|WP5000|WP[58] Pro|K[46]000[ _](?:Plus|Lite)|Y4800|K10000|K[4-8]000| WP(?:[5-7]|1[23]))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(C1[01235679]|C2[13]|K10000|K[46]000|WP[258]|U15)[ _]?Pro(?:[);/ ]|$)'
@@ -13255,7 +13263,7 @@ Oukitel:
       model: '$1 Lite'
     - regex: '(Y4800|K10000|K[4-8]000|WP2|WP5000|[CU]2|U10)(?:[);/ ]|$)'
       model: '$1'
-    - regex: ' (WP(?:[5-7]|12)|C11_F)(?:[);/ ]|$)'
+    - regex: ' (WP(?:[5-7]|1[23])|C11_F)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'OUKITEL; ([^;]+);'
       model: '$1'
@@ -17267,7 +17275,7 @@ UTStarcom:
   device: 'feature phone'
   model: '$1'
 
-# Ulefone
+# Ulefone (ulefone.com or ulefone.ru)
 Ulefone:
   regex: 'Ulefone|Gemini Pro|Power_[356]|Power_5S|S(?:10|9)_Pro|(?:Note [89]P|Armor(?:[ _](?:[2367]|2S|X[236]|6[SE]|3WT|3W|X))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?|Note 11P|Paris_X|P6000_Plus)(?:[);/ ]|$)'
   device: 'smartphone'
@@ -17310,8 +17318,10 @@ Ulefone:
       model: 'Armor 3W'
     - regex: 'Armor[ _]3WT(?:[);/ ]|$)'
       model: 'Armor 3WT'
-    - regex: 'Armor[ _](1[10]) 5G(?:[);/ ]|$)'
+    - regex: 'Armor[ _](1[10]|11T) 5G(?:[);/ ]|$)'
       model: 'Armor $1 5G'
+    - regex: 'Armor[ _](8) Pro(?:[);/ ]|$)'
+      model: 'Armor $1 Pro'
     - regex: 'Armor[ _]([236789])(?:[);/ ]|$)'
       model: 'Armor $1'
     - regex: 'Armor(?:[);/ ]|$)'
@@ -17348,6 +17358,8 @@ UMIDIGI:
       model: 'Rome X'
     - regex: 'BISON GT'
       model: 'Bison GT'
+    - regex: 'BISON Pro'
+      model: 'Bison Pro'
     - regex: 'BISON'
       model: 'Bison'
     - regex: 'hammer_S'
