feat(device) detect new brand Nubia model: Red Magic 6 (NX669J) and moved ZTE Nubia models to brand Nubia

--- a/Tests/fixtures/smartphone-20.yml
+++ b/Tests/fixtures/smartphone-20.yml
@@ -1844,8 +1844,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z11 Mini
+    brand: Nubia
+    model: Z11 Mini
   os_family: Android
   browser_family: Chrome
 -
