--- a/Tests/fixtures/smartphone-23.yml
+++ b/Tests/fixtures/smartphone-23.yml
@@ -5745,8 +5745,8 @@
     version: 87.0.0.18.99
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z11 Mini
+    brand: Nubia
+    model: Z11 Mini
   os_family: Android
   browser_family: Unknown
 -
@@ -6657,8 +6657,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia N2
+    brand: Nubia
+    model: N2
   os_family: Android
   browser_family: Unknown
 -
