--- a/Tests/fixtures/smartphone-25.yml
+++ b/Tests/fixtures/smartphone-25.yml
@@ -6149,8 +6149,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia M2 Lite
+    brand: Nubia
+    model: M2 Lite
   os_family: Android
   browser_family: Chrome
 -
@@ -6167,8 +6167,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia M2 Play
+    brand: Nubia
+    model: M2 Play
   os_family: Android
   browser_family: Chrome
 -
@@ -6185,8 +6185,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia N1
+    brand: Nubia
+    model: N1
   os_family: Android
   browser_family: Chrome
 -
@@ -6203,8 +6203,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia N1 Lite
+    brand: Nubia
+    model: N1 Lite
   os_family: Android
   browser_family: Chrome
 -
@@ -6221,8 +6221,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z11 Mini
+    brand: Nubia
+    model: Z11 Mini
   os_family: Android
   browser_family: Chrome
 -
@@ -6237,8 +6237,8 @@
     version: 6.2.0.54.r1169949.561
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z5S Mini
+    brand: Nubia
+    model: Z5S Mini
   os_family: Android
   browser_family: Unknown
 -
@@ -6253,8 +6253,8 @@
     version: 6.2.2.54.rec1912d.581
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z9 Max
+    brand: Nubia
+    model: Z9 Max
   os_family: Android
   browser_family: Unknown
 -
@@ -6271,8 +6271,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z9 Mini
+    brand: Nubia
+    model: Z9 Mini
   os_family: Android
   browser_family: Chrome
 -
@@ -6289,8 +6289,8 @@
     engine_version: "534.30"
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z9 Mini
+    brand: Nubia
+    model: Z9 Mini
   os_family: Android
   browser_family: Unknown
 -
