--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -1393,8 +1393,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia N3
+    brand: Nubia
+    model: N3
   os_family: Android
   browser_family: Chrome
 - 
@@ -1411,8 +1411,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia N3
+    brand: Nubia
+    model: N3
   os_family: Android
   browser_family: Chrome
 - 
@@ -1429,8 +1429,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Play
+    brand: Nubia
+    model: Play
   os_family: Android
   browser_family: Chrome
 - 
@@ -1447,8 +1447,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Red Magic
+    brand: Nubia
+    model: Red Magic
   os_family: Android
   browser_family: Unknown
 - 
@@ -1465,8 +1465,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Red Magic 3
+    brand: Nubia
+    model: Red Magic 3
   os_family: Android
   browser_family: Chrome
 - 
@@ -1483,8 +1483,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Red Magic 5G
+    brand: Nubia
+    model: Red Magic 5G
   os_family: Android
   browser_family: Chrome
 - 
@@ -1501,8 +1501,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Red Magic Mars
+    brand: Nubia
+    model: Red Magic Mars
   os_family: Android
   browser_family: Chrome
 - 
@@ -1519,8 +1519,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia V18
+    brand: Nubia
+    model: V18
   os_family: Android
   browser_family: Chrome
 - 
@@ -1537,8 +1537,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z11 Mini S
+    brand: Nubia
+    model: Z11 Mini S
   os_family: Android
   browser_family: Chrome
 - 
@@ -1555,8 +1555,8 @@
     engine_version: "537.36"
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z17 Mini
+    brand: Nubia
+    model: Z17 Mini
   os_family: Android
   browser_family: Unknown
 - 
@@ -1573,8 +1573,8 @@
     engine_version: "537.36"
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z17 Mini
+    brand: Nubia
+    model: Z17 Mini
   os_family: Android
   browser_family: Chrome
 - 
@@ -1591,8 +1591,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z17 Mini S
+    brand: Nubia
+    model: Z17 Mini S
   os_family: Android
   browser_family: Chrome
 - 
@@ -1609,8 +1609,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z18
+    brand: Nubia
+    model: Z18
   os_family: Android
   browser_family: Chrome
 - 
@@ -1627,8 +1627,8 @@
     engine_version: "537.36"
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z18 Mini
+    brand: Nubia
+    model: Z18 Mini
   os_family: Android
   browser_family: Unknown
 - 
@@ -1645,8 +1645,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z18S
+    brand: Nubia
+    model: Z18S
   os_family: Android
   browser_family: Chrome
 - 
@@ -1663,8 +1663,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z20
+    brand: Nubia
+    model: Z20
   os_family: Android
   browser_family: Chrome
 - 
@@ -1681,8 +1681,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z5S Mini
+    brand: Nubia
+    model: Z5S Mini
   os_family: Android
   browser_family: Chrome
 - 
@@ -1699,8 +1699,8 @@
     engine_version: "537.36"
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z5S Mini
+    brand: Nubia
+    model: Z5S Mini
   os_family: Android
   browser_family: Unknown
 - 
@@ -1717,8 +1717,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z9 Max
+    brand: Nubia
+    model: Z9 Max
   os_family: Android
   browser_family: Chrome
 - 
@@ -1735,8 +1735,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z9 Max Dual
+    brand: Nubia
+    model: Z9 Max Dual
   os_family: Android
   browser_family: Chrome
 - 
@@ -1753,8 +1753,8 @@
     engine_version: ""
   device:
     type: smartphone
-    brand: ZTE
-    model: Nubia Z9 Mini
+    brand: Nubia
+    model: Z9 Mini
   os_family: Android
   browser_family: Chrome
 - 
