feat(device) detect brand Samsung model: Galaxy Tab S7 FE 12.4" LTE (SM-T735) feat(device) detect brand Vertex model: Tab X8 feat(device) detect brand Ulefone model: Power Armor 13 feat(device) detect brand Tecno Mobile model: Spark 7 (KF6k) feat(device) detect brand ZTE models: Axon 30 Ultra (A2022PG), Blade V30 Vita (8030RU) feat(device) detect brand TCL models: 10 SE (T766U), 20L Plus (T775H)
feat(device) added test detect brand Samsung model: Galaxy Tab A 10.1" (2019) (SM-T515N)
feat(device) added test detect brand ZTE model: Blade A71 (A7030)
feat(device) added test detect brand Tecno Mobile model: Pova 2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13498,11 +13498,13 @@ Pentagram:
 
 # Tcl (tcl.com)
 TCL:
-  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|A50[27]DL|T78[02]H|5199I|7040N|5133A|5159[AJ]|5152D|T770H|T671[HF]|T790Y|T766H_EEA|T766A|T799[BH]|Percee TV)(?:[);/ ]|$)'
+  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|A50[27]DL|T78[02]H|5199I|7040N|5133A|5159[AJ]|5152D|T770H|T671[HF]|T790Y|T766H_EEA|T766[AU]|T799[BH]|T775H|Percee TV)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'TCLGalaG60(?:\(9108A\))?(?:[);/ ]|$)'
       model: 'Gala G60'
+    - regex: 'T775H(?:[);/ ]|$)'
+      model: '20L Plus'
     - regex: '5199I(?:[);/ ]|$)'
       model: 'C9'
     - regex: '5152D(?:[);/ ]|$)'
@@ -13529,7 +13531,7 @@ TCL:
       model: 'L9'
     - regex: 'T770H(?:[);/ ]|$)'
       model: '10L'
-    - regex: 'T766[HA](?:_EEA)?(?:[);/ ]|$)'
+    - regex: 'T766[HAU](?:_EEA)?(?:[);/ ]|$)'
       model: '10 SE'
     - regex: 'T671[HF](?:_EEA)?(?:[);/ ]|$)'
       model: '20 SE'
@@ -14161,6 +14163,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T878U(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Galaxy Tab S7 11.0" 5G'
+    - regex: '(?:SAMSUNG-)?SM-T735'
+      device: 'tablet'
+      model: 'Galaxy Tab S7 FE 12.4" LTE'
     - regex: '(?:SAMSUNG-)?SM-T900'
       device: 'tablet'
       model: 'Galaxy TabPRO 12.2" WiFi'
@@ -16771,7 +16776,7 @@ Tecno Mobile:
       model: 'Spark 6 Air'
     - regex: 'TECNO[ _]KE5[jk]?(?:[);/ ]|$)'
       model: 'Spark 6 Go'
-    - regex: 'TECNO[ _]KF6[nmj](?:[);/ ]|$)'
+    - regex: 'TECNO[ _]KF6[nmjk](?:[);/ ]|$)'
       model: 'Spark 7'
     - regex: 'TECNO[ _]KF8(?:[);/ ]|$)'
       model: 'Spark 7 Pro'
@@ -17304,6 +17309,8 @@ Ulefone:
       model: 'P6000 Plus'
     - regex: 'Paris_X'
       model: 'Paris X'
+    - regex: 'Power Armor 13(?:[);/ ]|$)'
+      model: 'Power Armor 13'
     - regex: 'Armor[ _]X([236])(?:[);/ ]|$)'
       model: 'Armor X$1'
     - regex: 'Armor[ _]6S(?:[);/ ]|$)'
@@ -19498,6 +19505,8 @@ ZTE:
       model: 'Axon 10 Pro 5G'
     - regex: 'A2021L?(?:[);/ ]|$)'
       model: 'Axon 11 5G'
+    - regex: 'A2022PG'
+      model: 'Axon 30 Ultra'
     - regex: 'N799D(?:[);/ ]|$)'
       model: 'Blade Eg'
     - regex: 'Z818L(?:[);/ ]|$)'
@@ -19756,6 +19765,8 @@ ZTE:
       model: 'Blade V8 SE'
     - regex: 'BLADE V0920'
       model: 'Blade V9 Vita'
+    - regex: 'ZTE 8030'
+      model: 'Blade V30 Vita'
     - regex: 'Blade V(9|10) Vita(?:[);/ ]|$)'
       model: 'Blade V$1 Vita'
     - regex: 'Blade V([89]|10)(?:[);/ ]|$)'
@@ -20098,7 +20109,7 @@ Inoi:
 
 # Vertex (vertex-digital.ru)
 Vertex:
-  regex: '(?:Luck|Luck_L1[02]0_[34]G|Lion_Dual|V709X|Tab [43]G (?:7-2|8-1|10-1)|Pro_P3[01]0_4G|Lion_DC|Baccara|Eagle[ _]4G|ImpressMAX)(?:[);/ ]|$)|Impress[ _]([^;/]+)(?:Build|\))'
+  regex: '(?:Luck|Luck_L1[02]0_[34]G|Lion_Dual|V709X|TAB X8|Tab [43]G (?:7-2|8-1|10-1)|Pro_P3[01]0_4G|Lion_DC|Baccara|Eagle[ _]4G|ImpressMAX)(?:[);/ ]|$)|Impress[ _]([^;/]+)(?:Build|\))'
   device: 'smartphone'
   models:
     - regex: '(Lion_Dual|Lion_DC|Baccara|Eagle[ _]4G|Luck_L1[02]0_[34]G|Luck)(?:[);/ ]|$)'
@@ -20118,6 +20129,9 @@ Vertex:
     - regex: '(V709X)'
       device: 'tablet'
       model: '$1'
+    - regex: 'TAB X8(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Tab X8'
     - regex: 'Tab ([43])G ([78]|10)-([21])'
       device: 'tablet'
       model: 'Tab $1G $2.$3"'
