feat(device) detect brand Samsung model: Galaxy A52 (SM-A525M), Galaxy A52s 5G (SM-A528B), Galaxy A52 5G (SM-A526B, SM-A5260) feat(device) detect brand BQ model: Soul (BQ-6051G)
feat(device) added test detect brand Xiaomi models: Redmi Note 9, Redmi Note 10, Redmi Note 10S,
 Redmi Note 10T, Redmi Note 10 5G, Redmi Note 9T, Redmi Note 8 (2021), Redmi 9, Mi 11i, Mi 11
feat(device) added test detect brand Samsung models: Galaxy A51 (SM-A515U1), Galaxy S20 5G (SM-G981N),
 Galaxy S10 (SM-G973U1)
feat(device) added test detect brand Nokia model: 2.3

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3793,6 +3793,8 @@ bq:
       model: 'Crystal'
     - regex: 'BQ-5052(?:[);/ ]|$)'
       model: 'Sense'
+    - regex: 'BQ-6051G(?:[);/ ]|$)'
+      model: 'Soul'
     - regex: 'BQ[S]?-5045(?:[);/ ]|$)'
       model: 'Fast'
     - regex: 'BQ(?:ru)?-(?:5037|5514L)(?:[);/ ]|$)'
@@ -14659,10 +14661,12 @@ Samsung:
       model: 'Galaxy A5 (2016)'
     - regex: '(?:SAMSUNG-)?SM-A520[FKLSWX]'
       model: 'Galaxy A5 (2017)'
-    - regex: '(?:SAMSUNG-)?SM-A525F'
+    - regex: '(?:SAMSUNG-)?SM-A525'
       model: 'Galaxy A52'
-    - regex: '(?:SAMSUNG-)?SC-53B'
+    - regex: '(?:SAMSUNG-)?(?:SC-53B|SM-A526)'
       model: 'Galaxy A52 5G'
+    - regex: '(?:SAMSUNG-)?SM-A528'
+      model: 'Galaxy A52s 5G'
     - regex: '(?:SAMSUNG-)?SM-A600(?:AZ|FN|GN|T1|[AFGNPTUX])'
       model: 'Galaxy A6'
     - regex: '(?:SAMSUNG-)?SM-A605(?:[FG]N|[08FGX])'
@@ -18459,7 +18463,7 @@ Zopo:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0|AESP0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[SEG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2012K11(?:[CG]|A[CI])|M2011K2[CG]|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19[CGYI]|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GCR])|M2010J19S[CGYI]|M1908C3JGG|M2102(?:K1AC|K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM|lancelot|XIG02|21061119[AD]G|M2101K(?:7BL|9AI)|M2012K10C|M2104K10AC|21051182G|joyeuse'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0|AESP0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[SEG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2012K11(?:[CG]|A[CI])|M2011K2[CG]|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19[CGYI]|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GCR])|M2010J19S[CGYI]|M1908C3JGG|M2102(?:K1AC|K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM|lancelot|XIG02|21061119[AD]G|M2101K(?:7BL|9AI)|M2012K10C|M2104K10AC|21051182G|joyeuse|galahad'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -18595,7 +18599,7 @@ Xiaomi:
       model: 'Redmi 1'
     - regex: 'M2004J7AC(?:[);/ ]|$)'
       model: 'Redmi 10X'
-    - regex: '(?:M2004J19C|M2006C3MII|lancelot)(?:[);/ ]|$)'
+    - regex: '(?:M2004J19C|M2006C3MII|lancelot|galahad)(?:[);/ ]|$)'
       model: 'Redmi 9'
     - regex: 'M2010J19SI(?:[);/ ]|$)'
       model: 'Redmi 9 Power'
@@ -18695,7 +18699,7 @@ Xiaomi:
     - regex: 'Redmi Note 5A Prime'
       model: 'Redmi Note 5A Prime'
       device: 'phablet'
-    - regex: 'M2010J19SC(?:[);/ ]|$)'
+    - regex: '(?:M2010J19SC|Redmi Note 9)(?:[);/ ]|$)'
       model: 'Redmi Note 9'
       device: 'phablet'
     - regex: 'M2003J15SC(?:[);/ ]|$)'
@@ -18725,7 +18729,7 @@ Xiaomi:
     - regex: 'M2101K7B(?:[GI]|NY)(?:[);/ ]|$)'
       model: 'Redmi Note 10S'
       device: 'phablet'
-    - regex: 'M2103K19[GC]'
+    - regex: '(?:M2103K19[GC]|Redmi Note 10 5G)(?:[);/ ]|$)'
       model: 'Redmi Note 10 5G'
       device: 'phablet'
     - regex: 'M2103K19I'
@@ -18737,7 +18741,7 @@ Xiaomi:
     - regex: '(?:M2101K6[GIRP]|M2104K10AC|Redmi Note 10 Pro)(?:[);/ ]|$)'
       model: 'Redmi Note 10 Pro'
       device: 'phablet'
-    - regex: 'M1908C3JGG(?:[);/ ]|$)'
+    - regex: '(?:M1908C3JGG|Redmi Note 8 \(2021\))(?:[);/ ]|$)'
       model: 'Redmi Note 8 (2021)'
       device: 'phablet'
     - regex: 'Redmi Note ([5-9]) Pro(?:[);/ ]|$)'
