--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -7166,3 +7166,129 @@
     model: Redmi Note 10T 5G
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 11; be-by; Redmi Note 9 Build/RP1A.200720.011) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/89.0.4389.116 Mobile Safari/537.36 XiaoMi/MiuiBrowser/12.12.2.2-gn
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: MIUI Browser
+    version: 12.12.2.2
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: phablet
+    brand: Xiaomi
+    model: Redmi Note 9
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 11; es-es; Redmi Note 10 Build/RKQ1.201022.002) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/79.0.3945.147 Mobile Safari/537.36 XiaoMi/MiuiBrowser/12.12.1-gn
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: MIUI Browser
+    version: 12.12.1
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: phablet
+    brand: Xiaomi
+    model: Redmi Note 10
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 11; ru-ru; Redmi Note 10S Build/RP1A.200720.011) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/89.0.4389.116 Mobile Safari/537.36 XiaoMi/MiuiBrowser/12.13.0-gn
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: MIUI Browser
+    version: 12.13.0
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: phablet
+    brand: Xiaomi
+    model: Redmi Note 10S
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 11; ru-ru; Redmi Note 10T Build/RP1A.200720.011) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/89.0.4389.116 Mobile Safari/537.36 XiaoMi/MiuiBrowser/12.13.0-gn
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: MIUI Browser
+    version: 12.13.0
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: phablet
+    brand: Xiaomi
+    model: Redmi Note 10T
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 11; uk-ua; Redmi Note 10 5G Build/RP1A.200720.011) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/89.0.4389.116 Mobile Safari/537.36 XiaoMi/MiuiBrowser/12.12.2.2-gn
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: MIUI Browser
+    version: 12.12.2.2
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: phablet
+    brand: Xiaomi
+    model: Redmi Note 10 5G
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 11; uz-uz; Redmi Note 9T Build/RP1A.200720.011) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/89.0.4389.116 Mobile Safari/537.36 XiaoMi/MiuiBrowser/12.13.0-gn
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: MIUI Browser
+    version: 12.13.0
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: phablet
+    brand: Xiaomi
+    model: Redmi Note 9T
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 11; ru-ru; Redmi Note 8 (2021) Build/RP1A.200720.011) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/89.0.4389.116 Mobile Safari/537.36 XiaoMi/MiuiBrowser/12.13.0-gn
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: MIUI Browser
+    version: 12.13.0
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: phablet
+    brand: Xiaomi
+    model: Redmi Note 8 (2021)
+  os_family: Android
+  browser_family: Android Browser
