feat(device) detect brand Mobicel model: Pulse 1 feat(device) detect brand Doogee models: S86 Pro, S88 Plus feat(device) detect brand Cat model: S62 Pro feat(device) detect brand Stylo model: S40 Life feat(device) detect brand Motorola model: Edge 20 Lite feat(device) detect brand Homtom model: HT3 Pro feat(device) detect brand Vivo model: Y20G (2021) (V2065) feat(device) detect brand iHunt models: S30 Ultra ApeX (2021), S21 Ultra 4G (2021)
feat(device) added test detect brand Pixus model: Sprint (Pixus_Sprint_2_16)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3176,7 +3176,7 @@ VGO TEL:
 
 # Vivo (vivo.com.cn, vivo.com)
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V202[0345]C?A|V202[235-9]|V205[47]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V204[013]|V204[6789]A|V20(6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|I2012|V206[16]|V205[08]|V2043_21|I1928)(?:[);/ ]|$)'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V202[0345]C?A|V202[235-9]|V205[47]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V204[013]|V204[6789]A|V20(6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|I2012|V206[156]|V205[08]|V2043_21|I1928)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A(?:[);/ ]|$)'
@@ -3363,6 +3363,8 @@ Vivo:
       model: 'Y20 (2021)'
     - regex: 'V2037(?:[);/ ]|$)'
       model: 'Y20G'
+    - regex: 'V2065(?:[);/ ]|$)'
+      model: 'Y20G (2021)'
     - regex: 'V2028(?:[);/ ]|$)'
       model: 'Y11s'
     - regex: 'V2038(?:[);/ ]|$)'
@@ -4114,7 +4116,7 @@ Casper:
 
 # Cat (Caterpillar, Catphones)
 Cat:
-  regex: 'Cat ?(tablet|stargate|nova)|B15Q|CAT B35|CAT-B100'
+  regex: 'Cat ?(tablet|stargate|nova)|(?:B15Q|CAT B35|CAT-B100|S62 Pro)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'B15Q'
@@ -4122,6 +4124,9 @@ Cat:
       device: 'smartphone'
     - regex: 'CAT B35'
       model: 'B35'
+      device: 'smartphone'
+    - regex: 'S62 Pro'
+      model: 'S62 Pro'
       device: 'smartphone'
     - regex: 'Cat ?(?:tablet)? ?((?:Galactica|Nova|StarGate|PHOENIX)[^/;]*) Build'
       model: '$1'
@@ -5138,7 +5143,7 @@ DoCoMo:
 
 # Doogee
 Doogee:
-  regex: 'DOOGEE[/ _-]|Valencia2_Y100(?:_?(?:pro|plus))?|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|(?:BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Y8 Plus|Hitman_DG850|S(?:[568]8|9[0567]|59|40)Pro|X9[56]Pro|S[478]0Lite|BL[579]000|N[24]0Pro|(?<!Lenovo )S90C|Ibiza_F2|S55_Lite|S60Lite|Iron-bone DG750|X10S|X60L|MIX2|Y6 Max|Y6_Piano(?:_black)?)(?:[);/ ]|$)'
+  regex: 'DOOGEE[/ _-]|Valencia2_Y100(?:_?(?:pro|plus))?|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|(?:BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Y8 Plus|Hitman_DG850|S(?:[568]8|9[0567]|59|40|86)Pro|X9[56]Pro|S[478]0Lite|S88Plus|BL[579]000|N[24]0Pro|(?<!Lenovo )S90C|Ibiza_F2|S55_Lite|S60Lite|Iron-bone DG750|X10S|X60L|MIX2|Y6 Max|Y6_Piano(?:_black)?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:Valencia2_)?Y100_Plus(?:[);/ ]|$)'
@@ -5163,8 +5168,10 @@ Doogee:
       model: 'BL5500 Lite'
     - regex: 'BL12000'
       model: 'BL12000'
-    - regex: 'S([568]8|9[0567]|59|40)Pro'
+    - regex: 'S([568]8|9[0567]|59|40|86)Pro'
       model: 'S$1 Pro'
+    - regex: 'S(88)Plus'
+      model: 'S$1 Plus'
     - regex: 'S([4-8]0|55)[_ ]?Lite'
       model: 'S$1 Lite'
     - regex: 'KISSME-DG580'
@@ -7030,10 +7037,10 @@ Hoffmann:
 
 # Homtom
 Homtom:
-  regex: 'Homtom|(?:HT[0-9]{1,2}(?: ?Pro)?)(?:[);/ ]|$)'
+  regex: 'Homtom|(?:HT[0-9]{1,2}(?: ?Pro)?|HT3_Pro)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: '(?:Homtom[_ ])?HT ?([0-9]{1,2}) ?Pro(?:[);/ ]|$)'
+    - regex: '(?:Homtom[_ ])?HT ?([0-9]{1,2})[ _]?Pro(?:[);/ ]|$)'
       model: 'HT$1 Pro'
     - regex: '(?:Homtom[_ ])?HT ?([0-9]{1,2}?)(?:[);/ ]|$)'
       model: 'HT$1'
@@ -7940,7 +7947,7 @@ iBerry:
 
 # iHunt
 iHunt:
-  regex: 'iHunt|One_ Love_|TITAN_P11000_PRO|Like_(3|4U|3_Pro)|X300 Elite|S10_Tank_2019|S60_Discovery_2019|AlienXLite2020|Alien X Lite|Alien_X|S20 Ultra ApeX 2021'
+  regex: 'iHunt|One_ Love_|TITAN_P11000_PRO|Like_(3|4U|3_Pro)|X300 Elite|S10_Tank_2019|S60_Discovery_2019|AlienXLite2020|Alien X Lite|Alien_X|S[23]0 Ultra ApeX 2021|S21 Ultra 4G 2021'
   device: 'smartphone'
   models:
     - regex: 'iHunt_Like'
@@ -7971,8 +7978,10 @@ iHunt:
       model: 'Alien X ApeX'
     - regex: 'Alien_X'
       model: 'Alien X'
-    - regex: 'S20 Ultra ApeX 2021'
-      model: 'S20 Ultra ApeX (2021)'
+    - regex: 'S([23]0) Ultra ApeX 2021'
+      model: 'S$1 Ultra ApeX (2021)'
+    - regex: 'S21 Ultra 4G 2021'
+      model: 'S21 Ultra 4G (2021)'
 
 # IconBIT
 IconBIT:
@@ -11392,7 +11401,7 @@ Mobiola:
 
 # Mobicel or Mobicell
 Mobicel:
-  regex: 'Mobicel_(R1)|ASTRO(?: Build|[;)]|$)|(?:R7_1|HYPE|DANDY(?:_ZAM)?|(?<!SMADL )Matrix|VENUS_G|TRENDY PLUS|FENDY_DS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS)|R1PLUS_1|ZOOM-H|REBEL|LEGEND MAX|Switch[ _]GO)(?:[);/ ]|$)'
+  regex: 'Mobicel_(R1)|ASTRO(?: Build|[;)]|$)|(?:R7_1|HYPE|DANDY(?:_ZAM)?|(?<!SMADL )Matrix|VENUS_G|TRENDY PLUS|FENDY_DS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS)|R1PLUS_1|ZOOM-H|REBEL|LEGEND MAX|Switch[ _]GO|PULSE_1)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Matrix'
@@ -11431,6 +11440,8 @@ Mobicel:
       model: 'Switch Go'
     - regex: 'R1PLUS_1'
       model: 'R1 Plus'
+    - regex: 'PULSE_1'
+      model: 'Pulse 1'
     - regex: 'Mobicel_(R1)'
       model: '$1'
     - regex: 'ZOOM-H'
@@ -11747,6 +11758,8 @@ Motorola:
       model: 'P30 Note'
     - regex: '(?:MOT-|Motorola-)?edge plus'
       model: 'Edge Plus'
+    - regex: '(?:MOT-|Motorola-)?edge 20 lite'
+      model: 'Edge 20 Lite'
     - regex: '(?:MOT-|Motorola-)?edge'
       model: 'Edge'
     - regex: '(?:MOT-|Motorola-)?one vision plus'
@@ -24766,7 +24779,7 @@ Smart:
 
 # Stylo
 Stylo:
-  regex: 'STYLO|S57_A[ZL]URE|Ithemba|S56 MIST|S53_STARK'
+  regex: 'STYLO|S57_A[ZL]URE|Ithemba|S56 MIST|S53_STARK|S40_LIFE'
   device: 'smartphone'
   models:
     - regex: 'STYLO[ _](F1)'
@@ -24787,6 +24800,8 @@ Stylo:
       model: 'Ithemba'
     - regex: 'S53_STARK'
       model: 'S53 Stark'
+    - regex: 'S40_LIFE'
+      model: 'S40 Life'
 
 # galaxy innovations or GI  (www.galaxy-innovations.ru)
 Galaxy Innovations:
