--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -2950,3 +2950,21 @@
     model: HiPad Pro
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Pixus_Sprint_2_16 Build/QP1A.190711) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/93.0.4577.82 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 93.0.4577.82
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Pixus
+    model: Sprint
+  os_family: Android
+  browser_family: Chrome
