--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -773,7 +773,7 @@
     default: 'Gecko'
 
 # Microsoft Edge (Spartan Edge)
-- regex: 'Edge[ /](\d+[\.\d]+)'
+- regex: '(?<!motorola )Edge[ /](\d+[\.\d]+)'
   name: 'Microsoft Edge'
   version: '$1'
   engine:
