feat(device) detect new brand Bluebird model: VF550 feat(device) detect new brand Mara models: Z, Z1, X1, S
feat(device) detect brand Stylo model: Life 2
feat(device) detect brand Unonu model: U4001
feat(device) detect brand Casper model: VIA P3
feat(device) detect brand Mobicel model: Trendy 2
feat(device) detect brand Blu model: Vivo XI Plus
feat(device) detect brand Krüger&Matz model: MOVE 9

feat(device) added test detect brand Motorola model: Moto Z2
feat(device) added test detect brand Vestel model: Venus V7
feat(device) added test detect brand Vivo model: Z1i
feat(device) added test detect brand Nokia model: X71

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2882,7 +2882,7 @@ Bitel:
 
 # Blu
 Blu:
-  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI|View)|Life One X2|G90(?: PRO)?|GRAND (?:M3|Max|5.5 HD|XL LTE|Mini)|R1 (?:HD|PLUS)|R2 (?:LTE|Plus)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD N1|B130DL|Vivo (?:5 Mini|One Plus|5R|XL[234]| Plus|8L|XI)|C5L 2020)(?:[);/ ]|$)'
+  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI|View)|Life One X2|G90(?: PRO)?|GRAND (?:M3|Max|5.5 HD|XL LTE|Mini)|R1 (?:HD|PLUS)|R2 (?:LTE|Plus)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD N1|B130DL|Vivo (?:5 Mini|One Plus|5R|XL[234]| Plus|8L|XI[+]?)|C5L 2020)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Advance (4.0 ?[LM]|4.0|5.[02](?: HD)?|A4|L[54])'
@@ -2983,7 +2983,7 @@ Blu:
       model: 'Vivo 5 Mini'
     - regex: 'Vivo One Plus 2019'
       model: 'Vivo One Plus (2019)'
-    - regex: '(?:BLU[_ ])?Vivo (One|XL3|XI) Plus'
+    - regex: '(?:BLU[_ ])?Vivo (One|XL3|XI)(?: Plus|[+])'
       model: 'Vivo $1 Plus'
     - regex: '(?:BLU[_ ])?Vivo (5R|XI|XL[42]|8L)'
       model: 'Vivo $1'
@@ -4090,14 +4090,14 @@ Casio:
     - regex: 'C811 4G(?:[);/ ]|$)'
       model: "G'zOne Commando 4G LTE"
 
-# Casper
+# Casper (casper.com.tr)
 Casper:
-  regex: 'CASPER[_ ]|VIA[- _](T7D|A[34]|E3|F[123]|G[34]|M4|[LS]8|S7|P2|V8C|A[13]_Plus(?:_64)?|A1(?:_1)?|S[13]0|S|T17_M|T1[07]|T7|T7-3G|T8B|T8D-3G|S1[78])(?:[);/ ]|$)'
+  regex: 'CASPER[_ ]|VIA[- _](T7D|A[34]|E3|F[123]|G[34]|M4|[LS]8|S7|P[23]|V8C|A[13]_Plus(?:_64)?|A1(?:_1)?|S[13]0|S|T17_M|T1[07]|T7|T7-3G|T8B|T8D-3G|S1[78])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:CASPER[_ ])?VIA_A1_Plus(?:_64)?'
       model: 'VIA A1 Plus'
-    - regex: '(?:CASPER[_ ])?VIA[_ ](G1_Plus|A3_Plus|G[13]|E1|[AE]2|M[123]|V[35689]|V10|G3|V6X|A[34]|E3|F[123]|G4|M4|P2|S|V8C|A1(?:_1)?)(?:[);/ ]|$)'
+    - regex: '(?:CASPER[_ ])?VIA[_ ](G1_Plus|A3_Plus|G[13]|E1|[AE]2|M[123]|V[35689]|V10|G3|V6X|A[34]|E3|F[123]|G4|M4|P[23]|S|V8C|A1(?:_1)?)(?:[);/ ]|$)'
       model: 'VIA $1'
     - regex: 'CASPER_VIA_E1c'
       model: 'VIA E1C'
@@ -9235,7 +9235,7 @@ Mymaga:
 
 # Krüger&Matz or Kruger&Matz (www.krugermatz.com)
 Krüger&Matz:
-  regex: 'Kruger[ _&]Matz|KrugerMatz[ _]|FLOW ?5PLUS|Flow 9|FLOW_5|FLOW7|FLOW6(?:S|Lite)|DRIVE9|DRIVE[_ ]6S?|MOVE8mini|MOVE_|LIVE_6plus|LIVE 5 PLUS|Live 9|LIVE4_KM043[89]|LIVE 7S|Flow 7S|KM(?:106[679]|1065G|0701_1|0702|0805_1|1070)'
+  regex: 'Kruger[ _&]Matz|KrugerMatz[ _]|FLOW ?5PLUS|Flow 9|FLOW_5|FLOW7|FLOW6(?:S|Lite)|DRIVE9|DRIVE[_ ]6S?|MOVE8mini|MOVE9|MOVE_|LIVE_6plus|LIVE 5 PLUS|Live 9|LIVE4_KM043[89]|LIVE 7S|Flow 7S|KM(?:106[679]|1065G|0701_1|0702|0805_1|1070)'
   device: 'smartphone'
   models:
     - regex: 'MOVE8mini'
@@ -9268,6 +9268,8 @@ Krüger&Matz:
       model: 'LIVE 7S'
     - regex: 'Live 9(?:[);/ ]|$)'
       model: 'LIVE 9'
+    - regex: 'MOVE9(?:[);/ ]|$)'
+      model: 'MOVE 9'
 
     - regex: 'KM(106[679])(?:[);/ ]|$)'
       device: 'tablet'
@@ -11403,7 +11405,7 @@ Mobiola:
 
 # Mobicel or Mobicell
 Mobicel:
-  regex: 'Mobicel_(R1)|ASTRO(?: Build|[;)]|$)|(?:R7_1|HYPE|DANDY(?:_ZAM)?|(?<!SMADL )Matrix|VENUS_G|TRENDY PLUS|FENDY_DS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS)|R1PLUS_1|ZOOM-H|REBEL|LEGEND MAX|Switch[ _]GO|PULSE_1)(?:[);/ ]|$)'
+  regex: 'Mobicel_(R1)|ASTRO(?: Build|[;)]|$)|(?:R7_1|HYPE|DANDY(?:_ZAM)?|(?<!SMADL )Matrix|VENUS_G|TRENDY PLUS|FENDY_DS|TANGO_LITE|BLINK|BERRY[_ ]?(?:[12]|PLUS)|R1PLUS_1|ZOOM-H|REBEL|LEGEND MAX|Switch[ _]GO|PULSE_1|TRENDY 2)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Matrix'
@@ -11416,6 +11418,8 @@ Mobicel:
       model: 'Berry 1'
     - regex: 'BERRY 2'
       model: 'Berry 2'
+    - regex: 'TRENDY 2'
+      model: 'Trendy 2'
     - regex: 'BERRY[_ ]PLUS'
       model: 'Berry Plus'
     - regex: 'TRENDY PLUS'
@@ -17488,11 +17492,13 @@ Unnecto:
     - regex: 'U905'
       model: 'Air 5.5'
 
-# Unonu
+# Unonu (unonumobile.com)
 Unonu:
-  regex: 'Unonu[ _-]'
+  regex: 'Unonu[ _-]|(?:U4001)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
+    - regex: '(U4001)(?:[);/ ]|$)'
+      model: '$1'
     - regex: 'Unonu[ _-]([^;/]+) Build'
       model: '$1'
     - regex: 'Unonu[ _-]?([^;/)]+)(?:[);/ ]|$)'
@@ -24784,7 +24790,7 @@ Smart:
 
 # Stylo
 Stylo:
-  regex: 'STYLO|S57_A[ZL]URE|Ithemba|S56 MIST|S53_STARK|S40_LIFE'
+  regex: 'STYLO|(?:S57_A[ZL]URE|Ithemba|S56 MIST|S53_STARK|S40_LIFE|LIFE_2)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'STYLO[ _](F1)'
@@ -24807,6 +24813,8 @@ Stylo:
       model: 'S53 Stark'
     - regex: 'S40_LIFE'
       model: 'S40 Life'
+    - regex: 'LIFE_2'
+      model: 'Life 2'
 
 # galaxy innovations or GI  (www.galaxy-innovations.ru)
 Galaxy Innovations:
@@ -24859,6 +24867,18 @@ Qnet Mobile:
       model: 'Hynex $1'
     - regex: 'Levin (V[12])'
       model: 'Levin $1'
+
+# Bluebird (www.bluebirdcorp.com)
+Bluebird:
+  regex: '(VF550)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
+
+# Mara or MaraPhones (maraphones.com)
+Mara:
+  regex: 'Mara(?: Phones)?[ _](Z1?|X1|S)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
 
 # Devices with undectable brand, but detectable model
 Unknown:
